[improvement](file) Build native Parquet scan path for FileScannerV2 (#65674)
Issue Number: None

Related PR: None

FileScannerV2's Parquet path previously relied on Arrow-oriented
metadata and value adapters, built intermediate decoded objects before
materializing Doris columns, and lacked a single V2-owned contract for
schema mapping, predicate execution, sparse reads, cache identity, and
metadata aggregation. This duplicated decode/conversion work, retained
large temporary buffers for nested and string columns, and made nullable
sparse scans degrade into many small read/skip operations.

This PR builds an independent native Parquet scan path under
`be/src/format_v2`. The V2 path owns its metadata tree, page/level/value
decoders, predicate scheduling, aggregate metadata handling, and
Doris-column materialization. It does not call the legacy V1 Parquet
reader or modify the V1 implementation under `be/src/format`.

- Replace the metadata adapter with a native metadata tree shared by
schema mapping, row-group planning, statistics, dictionary pruning,
Bloom filters, page indexes, and scan readers.
- Preserve compatible LIST/MAP/STRUCT wrapper semantics while validating
malformed schema nodes, primitive-only group annotations, physical
types, flat-leaf value counts, offsets, sizes, page headers, levels,
dictionary IDs, and index metadata before use.
- Keep schema evolution and table/file type reconciliation in the V2
`ColumnMapper` expression layer.

- Decode Page V1/V2 definition and repetition levels and PLAIN, BOOLEAN
RLE, dictionary, DELTA_BINARY_PACKED, DELTA_LENGTH_BYTE_ARRAY,
DELTA_BYTE_ARRAY, and BYTE_STREAM_SPLIT value streams.
- Keep physical decoding in native decoders and physical-to-logical
conversion in `DataTypeSerDe`, appending directly into final Doris
columns.
- Reconstruct ARRAY/MAP/STRUCT values from native levels and child
readers; levels-only and COUNT scans avoid unused payload
materialization.
- Remove obsolete Arrow RecordReader/builders, metad